update index title, css and readme

--- a/index.html
+++ b/index.html
@@ -1,13 +1,15 @@
-<!doctype html>
-<html lang="en">
-  <head>
-    <meta charset="UTF-8" />
-    <link rel="icon" type="image/svg+xml" href="/vite.svg" />
-    <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <title>Vite + React + TS</title>
-  </head>
-  <body>
-    <div id="root"></div>
-    <script type="module" src="/src/main.tsx"></script>
-  </body>
-</html>
+### Getting Started
+This is a Book Search with Infinite Scrolling Page built based on React + TypeScript.
+
+App: https://react-book-search-by-jh.web.app/
+
+Checkout this repo, install dependencies, then start the gulp process with the following:
+```
+> npm install
+> npm dev
+```
+
+![image](https://github.com/johnnyhsu1106/react-book-search-with-infinite-scrolling/assets/18588513/b2c06147-93d5-41be-ba24-3236a72bbdb0)
+
+![image](https://github.com/johnnyhsu1106/react-book-search-with-infinite-scrolling/assets/18588513/26bd9143-d6fa-48fc-a15f-900c203def32)
+
